# ilab_ur_robot

./: README.md  ilab_ur_robot.repos
ilab_ur_bringup/: CMakeLists.txt  package.xml
ilab_ur_bringup/launch/: ilab_ur.launch.py  ilab_ur_planning.launch.py  view_ilab_ur.launch.py
ilab_ur_description/: CMakeLists.txt  package.xml
ilab_ur_description/config/: controllers.yaml  initial_positions.yaml
ilab_ur_description/moveit2/: joint_limits.yaml  kinematics.yaml  moveit_controller_config.yaml  moveit_servo_config.yaml  ompl_planning.yaml
ilab_ur_description/rviz/: ilab_ur.rviz  view_ilab_ur.rviz
ilab_ur_description/srdf/: flexicart.xacro  ilab_ur.srdf.xacro  ilab_ur_macro.srdf.xacro
ilab_ur_description/urdf/: 2f_140.ros2_control.xacro  flexicart.xacro  ilab_ur.urdf.xacro  robotiq_2f_140_macro.urdf.xacro
ilab_ur_mtc/: CMakeLists.txt  package.xml
ilab_ur_mtc/launch/: ilab_ur_pick_and_place_demo.launch.py
ilab_ur_mtc/src/: ilab_ur_mtc_node.cpp
